# flex-gateway-dev-framework

./: .gitignore  README.md  create-project.py  template-input.json
example/: docker-compose.yaml
example/custom-policy/: Cargo.toml  policy-definition.json  policy-definition.yaml  policy-implementation.yaml
example/flex-gateway/: policy-binding-http-bin-policy.yaml
examples/custom-response/: configuration.env  docker-compose.yaml
examples/log-headers/: configuration.env  docker-compose.yaml
examples/log-headers/custom-policy/: Cargo.toml  (+4 more)
examples/service-callout/: docker-compose.yaml
examples/service-callout/custom-policy/: Cargo.toml  policy-definition.json  policy-definition.yaml  policy-implementation.yaml
examples/service-callout/custom-policy/src/: lib.rs
examples/signed-jwt-token/: docker-compose.yaml  main.rs
examples/signed-jwt-token/custom-policy/: Cargo.toml  extension-policy-template.yaml  policy-definition.json
examples/signed-jwt-token/custom-policy/src/: lib.rs
project/: docker-compose.yaml
project/custom-policy/: Cargo.toml  extension-policy-template.yaml  policy-definition.json  policy-definition.yaml  policy-implementation.yaml
project/flex-gateway/: Dockerfile  api-instance-http-bin.yaml  config.properties  policy-binding-http-bin-policy.yaml
project/rustbox/: Dockerfile
rustbox/: Dockerfile  lib.rs
template/: docker-compose.yaml
template/certs/: ca.crt  ca.key  server.crt  server.key
template/custom-policy/: Cargo.toml  extension-policy-template.yaml  policy-definition.json  policy-definition.yaml  policy-implementation.yaml
template/flex-gateway/: Dockerfile  config.properties  policy-binding-http-bin-policy.yaml
template/flex-gw/: policy-binding-http-bin-policy.yaml  policy-binding-http-bin-tls-policy.yaml
template/rustbox/: Cargo.toml
(+28 files in other folders)
