[package]
name = "mock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name="mock"
path="src/lib.rs"

[dependencies]
log = "0.4"
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"