[package]
name = "service_callout_policy"
version = "0.1.0"
authors = ["Amit Tayade <tayadeamitr@google.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib"]
name = "service_callout_policy"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
proxy-wasm = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
url = "2.4"
jsonpath_lib = "0.3"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
