[package]
name = "dummy_policy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name="dummy_policy"
path="src/lib.rs"

[dependencies]
log = "0.4"
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
rsa = { version = "0.9.2", features = ["sha2"] }
rand = "0.8.5"
jwt-compact = { version = "0.7.0", features = ["rsa"] }
chrono = "0.4.29"
